@@ -54,6 +54,7 @@ CAY-1684 Upgrade commons-collections dependency to 3.2.1
 CAY-1686 StringIdQuery - a query providing an optimized fetch for objects based on 1..N String IDs. 
 CAY-1688 [PATCH] rename DataDomain.getNode to getDataNode
 CAY-1693 Initial support for bitwise operators in Expression and SelectQuery - MySQL
+CAY-1698 ObjectIdRelationship support for AuditableChild
 
 Bug Fixes Since 3.1M3:
 
